更改了名字。

--- a/OptionView.xcodeproj/xcshareddata/xcschemes/PositionManager.xcscheme
+++ b/OptionView.xcodeproj/xcshareddata/xcschemes/PositionManager.xcscheme
@@ -97,7 +97,7 @@
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
-      customArchiveName = "PositionManager"
+      customArchiveName = "OptionView"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
